[gd_scene load_steps=3 format=2]

[ext_resource path="res://world_map/world_map.gd" type="Script" id=1]
[ext_resource path="res://world_map/Location.gd" type="Script" id=2]

[node name="world_map" type="Node2D"]
script = ExtResource( 1 )

[node name="Location" type="Label" parent="."]
margin_left = 14.0
margin_top = 14.0
margin_right = 60.0
margin_bottom = 28.0
text = "Default"
script = ExtResource( 2 )

[node name="home_button" type="Button" parent="."]
margin_left = 439.062
margin_top = 92.3468
margin_right = 516.062
margin_bottom = 125.347
text = "home"

[node name="grocery_button" type="Button" parent="."]
margin_left = 174.0
margin_top = 92.0
margin_right = 256.0
margin_bottom = 128.0
text = "grocery"

[node name="battle_button" type="Button" parent="."]
margin_left = 317.0
margin_top = 196.0
margin_right = 371.0
margin_bottom = 216.0
text = "Battle"
[connection signal="loc_changed" from="." to="Location" method="_on_world_map_loc_changed"]
[connection signal="pressed" from="home_button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="grocery_button" to="." method="_on_grocery_button_pressed"]
[connection signal="pressed" from="battle_button" to="." method="_on_battle_button_pressed"]
